// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Site admin user table invite name column test Test admin invitation 1`] = `
<div
  className="cell cell"
>
  <img
    className="avatar avatar avatar-color-6"
    src="unresolved-user-avatar.png"
  />
  <div
    className="userInfo"
  >
    <div
      className="inviteEmail"
    >
      adminUser1
    </div>
    <div
      className="inviteType"
    >
      Administrator
    </div>
  </div>
</div>
`;

exports[`Site admin user table invite name column test Test learner invitation 1`] = `
<div
  className="cell cell"
>
  <img
    className="avatar avatar avatar-color-6"
    src="unresolved-user-avatar.png"
  />
  <div
    className="userInfo"
  >
    <div
      className="inviteEmail"
    >
      learnerUser1
    </div>
    <div
      className="inviteType"
    >
      Learner
    </div>
  </div>
</div>
`;
